--- a/less/_base.less
+++ b/less/_base.less
@@ -14,8 +14,7 @@ body {
 	div#page {
 		
 		.clearfix();
-		margin-left:auto;
-		margin-right:auto;
+		.center();
 		width:85%;
 		max-width:96rem;
 		font-family:"Mako",sans-serif;
@@ -115,13 +114,11 @@ body {
 				}
 			}
 
-			div.iconwrapper {
-				.center();
-				padding-left:1.2rem;
-				padding-right:1.2rem;
-				padding-top:0.6rem;
-				padding-bottom:0.6rem;
-				width:5rem;
+			p.iconwrapper {
+				text-align: center;
+				padding-top:1rem;
+				padding-bottom:3rem;
+				width: 100%;
 				i {
 					font-size:3rem;
 					color:#777;
@@ -133,7 +130,8 @@ body {
 					}
 				}
 				a {
-					display: inline-block;
+					padding-left:1.2rem;
+					padding-right:1.2rem;
 				}
 			}
 		}
