--- a/less/_desktop.less
+++ b/less/_desktop.less
@@ -30,11 +30,6 @@ body {
 			div.imgWrapper {
 				float:left;
 			}
-
-			div.iconwrapper {
-				min-width:5rem;
-				width:20%;
-			}
 		}
 
 		div#bioColumnLeft {
